--- a/.github/workflows/jnu-parking-was-peak.yml
+++ b/.github/workflows/jnu-parking-was-peak.yml
@@ -38,17 +38,13 @@ jobs:
               with:
                   terraform_version: 1.5.7
                   terraform_wrapper: false
-                  
-            - name: Terraform Init
-              id: init
-              run: terraform init
 
             - name: Terraform Plan
               id: plan
               run: terraform plan -no-color
              
-            - name: Terraform Apply
-              run: terraform apply -auto-approve
+            # - name: Terraform Apply
+            #   run: terraform apply -auto-approve
 
             - name: 배포 완료 슬랙 알림 보내기
               uses: 8398a7/action-slack@v3
