--- a/.github/workflows/jnu-parking-was-peak.yml
+++ b/.github/workflows/jnu-parking-was-peak.yml
@@ -39,6 +39,14 @@ jobs:
                   terraform_version: 1.5.7
                   terraform_wrapper: false
 
+            - name: Terraform Import
+              id: improt
+              run: |
+                terraform import aws_eip.was-eip1 eipalloc-0bd8840069f605ca0
+                terraform import aws_instance.jnu-parking-ec2-prod i-0a7e1c8e7f0b149b0
+                terraform import aws_db_instance.jnu-parking-rds-prod jnu-parking-rds-prod
+                terraform import aws_elasticache_replication_group.jnu-parking-redis-prod jnu-parking-redis-prod
+
             - name: Terraform Plan
               id: plan
               run: terraform plan -no-color
