--- a/.github/workflows/jnu-parking-was-peak.yml
+++ b/.github/workflows/jnu-parking-was-peak.yml
@@ -39,6 +39,10 @@ jobs:
                   terraform_version: 1.5.7
                   terraform_wrapper: false
 
+            - name: Terraform Init
+              id: init
+              run: terraform init
+
             # - name: Terraform Import
             #   id: import
             #   run: |
@@ -48,7 +52,7 @@ jobs:
             #     terraform import aws_elasticache_replication_group.jnu-parking-redis-prod jnu-parking-redis-prod
 
             - name: Terraform Plan
-              id: plan
+              id: Plan
               run: terraform plan -no-color
              
             # - name: Terraform Apply
