--- a/.github/workflows/jnu-parking-was-idle.yml
+++ b/.github/workflows/jnu-parking-was-idle.yml
@@ -51,7 +51,6 @@ jobs:
               with:
                 workspace: ${{ env.TF_WORKSPACE }}
                 configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
-                plan_only: true
 
             - name: Get Plan Output
               uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
@@ -59,9 +58,13 @@ jobs:
               with:
                 plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
               
-             
-            # - name: Terraform Apply
-            #   run: terraform apply -auto-approve
+            - name: Apply
+              uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
+              if: fromJSON(steps.plan-run.outputs.payload).data.attributes.actions.IsConfirmable
+              id: apply
+              with:
+                run: ${{ steps.plan-run.outputs.run_id }}
+                comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
 
             - name: 배포 완료 슬랙 알림 보내기
               uses: 8398a7/action-slack@v3
