--- a/.github/workflows/jnu-parking-was-idle.yml
+++ b/.github/workflows/jnu-parking-was-idle.yml
@@ -86,57 +86,53 @@ jobs:
                     }
               env:
                 SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-    # run-spring-boot:
-    #     needs: [ prepare-variables, modify-infra-with-terraform ]
-    #     runs-on: [ ubuntu-latest ]
-    #     name: 스프링 부트 기동
-
-    #     permissions:
-    #         id-token: write
-    #         contents: read
-
-    #     steps:
-    #         - name: GitHub 에서 레포 받아오기
-    #           uses: actions/checkout@v3
-
-    #         - name: 배포 스크립트 실행
-    #           uses: appleboy/ssh-action@master
-    #           with:
-    #             host: ${{ secrets.PROD_SSH_HOST }}
-    #             username: ${{ secrets.PROD_SSH_USERNAME }}
-    #             key: ${{ secrets.PROD_SSH_KEY }}
-    #             port: ${{ secrets.PROD_SSH_PORT }}
-    #             script: |
-    #                 sudo docker rm -f $(sudo docker ps -qa)
-    #                 sudo docker pull ${{ needs.prepare-variables.outputs.image-name }}:latest
-    #                 sudo docker compose up -d --env-file .env.idle
-    #                 sudo docker image prune -f
-
-    #         - name: 배포 완료 슬랙 알림 보내기
-    #           uses: 8398a7/action-slack@v3
-    #           with:
-    #             status: custom
-    #             fields: author, workflowRun, pullRequest
-    #             custom_payload: |
-    #                 {
-    #                     attachments: [{
-    #                         color: '#24C183',
-    #                         title: '✅ Spring boot 기동 알림',
-    #                         text: `Spring boot 기동 성공!,
-    #                         fields: [
-    #                             {
-    #                                 title: '배포자',
-    #                                 value: `${process.env.AS_AUTHOR}`,
-    #                                 short: true,
-    #                             },
-    #                             {
-    #                                 title: '워크플로 링크',
-    #                                 value: `${process.env.AS_WORKFLOW_RUN}`,
-    #                                 short: true,
-    #                             },
-    #                         ]
-    #                     }]
-    #                 }
-    #           env:
-    #             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+                
+    run-spring-boot:
+        needs: [ prepare-variables, modify-infra-with-terraform ]
+        runs-on: [ ubuntu-latest ]
+        name: 스프링 부트 기동
+        permissions:
+            id-token: write
+            contents: read
+        steps:
+            - name: GitHub 에서 레포 받아오기
+              uses: actions/checkout@v3
+            - name: 배포 스크립트 실행
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.PROD_SSH_HOST }}
+                username: ${{ secrets.PROD_SSH_USERNAME }}
+                key: ${{ secrets.PROD_SSH_KEY }}
+                port: ${{ secrets.PROD_SSH_PORT }}
+                script: |
+                    sudo docker rm -f $(sudo docker ps -qa)
+                    sudo docker pull ${{ needs.prepare-variables.outputs.image-name }}:latest
+                    sudo docker compose up -d --env-file .env.idle
+                    sudo docker image prune -f
+            - name: 배포 완료 슬랙 알림 보내기
+              uses: 8398a7/action-slack@v3
+              with:
+                status: custom
+                fields: author, workflowRun, pullRequest
+                custom_payload: |
+                    {
+                        attachments: [{
+                            color: '#24C183',
+                            title: '✅ Spring boot 기동 알림',
+                            text: `Spring boot 기동 성공!,
+                            fields: [
+                                {
+                                    title: '배포자',
+                                    value: `${process.env.AS_AUTHOR}`,
+                                    short: true,
+                                },
+                                {
+                                    title: '워크플로 링크',
+                                    value: `${process.env.AS_WORKFLOW_RUN}`,
+                                    short: true,
+                                },
+                            ]
+                        }]
+                    }
+              env:
+                SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
