chore: Test plan with target parameter 3

--- a/.github/workflows/jnu-parking-was-peak-v2.yml
+++ b/.github/workflows/jnu-parking-was-peak-v2.yml
@@ -39,22 +39,23 @@ jobs:
               uses: actions/checkout@v3
 
             - name: 피크 모드 설정
-              uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+              uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.3.0
               id: set-peak
               with:
                 workspace: ${{ env.TF_WORKSPACE }}
                 directory: ${{ env.PEAK_CONFIG_DIRECTORY }}
 
             - name: 레디스 단독 scale-up Plan 생성
-              uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+              uses: hashicorp/tfc-workflows-github/actions/create-run@v1.3.0
               id: redis-scale-up-plan
               with:
                 workspace: ${{ env.TF_WORKSPACE }}
                 configuration_version: ${{ steps.set-peak.outputs.configuration_version_id }}
-                args: "-target=aws_elasticache_replication_group.jnu-parking-redis-prod"
+                target: "aws_elasticache_replication_group.jnu-parking-redis-prod"
+
               
             - name: 레디스 단독 scale-up Plan 실행
-              uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
+              uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.3.0
               if: fromJSON(steps.redis-scale-up-plan.outputs.payload).data.attributes.actions.IsConfirmable
               id: redis-scale-up-apply
               with:
@@ -62,22 +63,22 @@ jobs:
                 comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
 
             - name: 메인터넌스 모드 설정
-              uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+              uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.3.0
               id: set-maintenance
               with:
                 workspace: ${{ env.TF_WORKSPACE }}
                 directory: ${{ env.MAINTENANCE_CONFIG_DIRECTORY }}
 
             - name: 공지 페이지 라우팅 변경 Plan 생성
-              uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+              uses: hashicorp/tfc-workflows-github/actions/create-run@v1.3.0
               id: maintenance-routing-plan
               with:
                 workspace: ${{ env.TF_WORKSPACE }}
                 configuration_version: ${{ steps.set-maintenance.outputs.configuration_version_id }}
-                args: "-target=aws_cloudfront_distribution.jnu-parking-manager-distribution -target=aws_cloudfront_distribution.jnu-parking-apply-distribution"
+                target: "aws_cloudfront_distribution.jnu-parking-apply-distribution,aws_cloudfront_distribution.jnu-parking-manager-distribution"
               
             - name: 공지 페이지 라우팅 변경 Plan 실행
-              uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
+              uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.3.0
               if: fromJSON(steps.maintenance-routing-plan.outputs.payload).data.attributes.actions.IsConfirmable
               id: maintenance-routing-apply
               with:
